# harbour-vipiano

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  harbour-synth.desktop  harbour-synth.pro  harbour-vipiano.desktop  harbour-vipiano.pro
fluidsynth/: CMakeLists.txt
fluidsynth/src/: CMakeLists.txt
fluidsynth/src/drivers/: fluid_pulse.c
qml/: harbour-vipiano.qml
qml/cover/: Cover.qml  CoverPage.qml
qml/pages/: FirstPage.qml  Octave.qml  PianoPage.qml  SecondPage.qml
rpm/: harbour-synth.changes.in  harbour-synth.spec  harbour-synth.yaml  harbour-vipiano.changes.in  harbour-vipiano.spec  harbour-vipiano.yaml
soundfonts/: COPYING  FluidR3Mono_GM.sf3
src/: harbour-synth.cpp  harbour-vipiano.cpp  synthesizer.cpp  synthesizer.h  synthsettings.cpp  synthsettings.h
translations/: harbour-vipiano-de.ts  harbour-vipiano.ts
